# server_mcp_bridge

./: .env.example  .gitignore  CMakeLists.txt  README.md  TASKS.md  TASKS_WINDOWS.md
.github/workflows/: release.yml  windows-ci.yml
debian/: changelog  conffiles  control  debhelper-build-stamp  mcp-bridge.service  postinst  postrm  rules  server-mcp-bridge.postrm.debhelper
etc/mcp_bridge/: mcp.json.template
installer/: install.ps1  install.sh  mcp_bridge-cron-runner  mcp_bridge-cron-runner.ps1  release.md  uninstall.ps1
installer/admx/: mcp_bridge.admx
installer/admx/en-US/: mcp_bridge.adml
installer/wix/: mcp_bridge.wxs  postinstall.ps1
src/: main.cpp
src/cli/: auth_create.cpp  auth_list.cpp  auth_rotate.cpp  cli_main.cpp  cli_main.hpp  webhook_set.cpp  welcome_banner.cpp  welcome_banner.hpp
src/core/: auth.cpp  auth.hpp  config.cpp  config.hpp  context.cpp  context.hpp  cron_store.cpp  cron_store.hpp  crypto.cpp  crypto.hpp  grant_template.cpp  grant_template.hpp  grants.cpp  grants.hpp  jsonrpc.cpp  jsonrpc.hpp  logger.cpp  logger.hpp  mcp_router.cpp  mcp_router.hpp  rate_limiter.cpp  rate_limiter.hpp  request_context.hpp  response.hpp  runtime_sync.cpp  runtime_sync.hpp  server.cpp  server.hpp  session.cpp  session.hpp  shortid.cpp  shortid.hpp  user_store.cpp  user_store.hpp
src/platform/: platform.hpp
src/platform/linux/: firewall_linux.cpp  process_linux.cpp  sandbox_linux.cpp  service_linux.cpp
src/platform/windows/: firewall_windows.cpp  priv_client.cpp  priv_client.hpp  process_windows.cpp  sandbox_windows.cpp  service_windows.cpp
src/priv/: main.c
src/priv_win/: audit.cpp  audit.hpp  main.cpp  operations.cpp  operations.hpp  protocol.hpp
src/registry/: tool_registry.cpp  tool_registry.hpp  tool_types.hpp
src/tools/admin/: grant_ops.cpp  grant_ops.hpp  user_ops.cpp  user_ops.hpp
src/tools/data/: database_ops.cpp  database_ops.hpp  file_ops.cpp  file_ops.hpp
src/tools/exec/: command_ops.cpp  command_ops.hpp
src/tools/hosting/: process_mgmt.cpp  process_mgmt.hpp  webserver_ops.cpp  webserver_ops.hpp
src/tools/networking/: firewall_ops.cpp  firewall_ops.hpp  port_ops.cpp  port_ops.hpp
src/tools/sandbox/: sandbox_ops.cpp  sandbox_ops.hpp
src/tools/scheduling/: cron_backend.hpp  cron_backend_linux.cpp  cron_backend_windows.cpp  cron_ops.cpp  cron_ops.hpp  cron_to_schtasks.cpp  cron_to_schtasks.hpp
tests/: CMakeLists.txt  test_cron_store.cpp  test_cron_to_schtasks.cpp  test_crypto.cpp  test_framework.hpp  test_grant_template.cpp  test_jsonrpc.cpp  test_session.cpp  test_shortid.cpp  test_user_store.cpp
